# snakemake-executor-plugin-tes

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
funnel-work-dir/: funnel.db
snakemake_executor_plugin_tes/: __init__.py
tests/: funnel.cfg  tests.py
