[tool.poetry]
name = "snakemake-executor-plugin-tes"
version = "0.1.0"
description = "A Snakemake executor plugin for submitting jobs via GA4GH TES."
authors = [
    "Sven Twardziok <sven.twardziok@bih-charite.de>",
    "Alex Kanitz <alexander.kanitz@alumni.ethz.ch>",
    "Valentin Schneider-Lunitz <valentin.schneider-lunitz@bih-charite.de>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
snakemake-interface-common = "^1.4.1"
snakemake-interface-executor-plugins = "^6.0.0"
py-tes = "^0.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git", branch = "main"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
