[tool.poetry]
name = "snakemake-executor-plugin-tes"
version = "0.1.1"
description = "A Snakemake executor plugin for submitting jobs via GA4GH TES."
authors = [
    "Sven Twardziok <sven.twardziok@bih-charite.de>",
    "Alex Kanitz <alexander.kanitz@alumni.ethz.ch>",
    "Valentin Schneider-Lunitz <valentin.schneider-lunitz@bih-charite.de>",
    "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.0"
snakemake-interface-executor-plugins = "^8.0.2"
py-tes = "^0.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git", branch = "main"}
snakemake-storage-plugin-s3 = "^0.2.4"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
